Use valueOf()
- Remove redundant parentheses